cmake_minimum_required(VERSION 3.27)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled main.c
)

add_executable(r1 r1.c)
add_executable(r2 r2.c
        r2.c)
add_executable(r3 r3.c
        r3.c)
add_executable(fat fat.c
        fat.c)
add_executable(2728 2728.c
        2728.c)
add_executable(1272b 1272b.c)
add_executable(2153b 2153b.c)
add_executable(1686b 1686b.c
        1686b.c)
add_executable(teste teste.c)
add_executable(linkedlist linkedlist.c)
add_executable(1031b 1031b.c)
add_executable(1449b 1449b.c)
add_executable(1244b 1244b.c)
add_executable(2338b 2338b.c)
add_executable(2338blist 2338blist.c)
add_executable(2506b 2506b.c)
add_executable(2492B 2492b.c)
add_executable(2729b 2729b.c)