cmake_minimum_required(VERSION 3.27)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled main.c)

add_executable(r1 r1.c)

add_executable(r2 r2.c)

add_executable(r3 r3.c)

add_executable(fat fat.c)

add_executable(2728b beecrowd/2728.c)

add_executable(1272b beecrowd/1272b.c)

add_executable(2153b beecrowd/2153b.c)

add_executable(1686b beecrowd/1686b.c)

add_executable(linkedlist linkedlist.c)

add_executable(1031b beecrowd/1031b.c)

add_executable(1449b beecrowd/1449b.c)

add_executable(1244b beecrowd/1244b.c)

add_executable(2338b beecrowd/2338b.c)

add_executable(2338blist beecrowd/2338blist.c)

add_executable(2506b beecrowd/2506b.c)

add_executable(2492B beecrowd/2492b.c)

add_executable(2729b beecrowd/2729b.c)

add_executable(1030b beecrowd/1030b.c)

add_executable(doublelinkedlist doublelinkedlist.c)

add_executable(circularlinkedlist circularlinkedlist.c)

add_executable(P2PE P2PE.c)

add_executable(Container leetcode/Container.c)

